# DeepLearningSystems

./: .gitignore  README.md
hw0/: hw0.ipynb
hw0/src/: simple_ml.py  simple_ml_ext.cpp
hw1/: hw1.ipynb
hw1/apps/: simple_ml.py
hw1/python/needle/: autograd.py  ops.py
hw2/: hw2.ipynb
hw2/apps/: mlp_resnet.py
hw2/python/needle/: autograd.py  data.py  init.py  nn.py  ops.py  optim.py
hw3/: CMakeLists.txt  hw3.ipynb
hw3/python/needle/backend_ndarray/: ndarray.py
hw3/src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
hw3/tests/: test_ndarray.py
lecture14/: 14_hardware_acceleration_architecture_overview.ipynb  CMakeLists.txt
lecture14/src/: ndarray_backend_cpu.cc
lecture4/: 5_automatic_differentiation_implementation.ipynb
lecture4/python/needle/: autograd.py  ops.py
lecture8/: 8_nn_library_implementation.ipynb
